--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 */
 
 
-/*some changes*/
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=PT+Serif:400,700&subset=cyrillic');
 
 
 body{
@@ -35,11 +36,17 @@ p {
 .caption-in-page{
     font-weight: 700;
     font-family: "PT Sans", sans-serif;
-    font-size: 1em;
-    line-height: 1.4em;
+    font-size: 1.2em;
+    line-height: 1.6em;
     /*color: #ef404e;*/
     padding-right: 20px;
 }
+.red-name {
+    display: inline;
+    background: #ef404e;
+    color: #fff;
+}
+
 .birka {
     color: #ef404e;
     font-weight: 700;
@@ -52,12 +59,17 @@ a,a:visited {
     padding-bottom: 1px;
     color: #155d8a;
     border-bottom: 1px solid rgba(21,93,138,.25);
+    display: inline;
 }
 a:hover{color: #0e3e5c; border-bottom: 1px solid rgba(14,62,92,.25);}
 a>h2{
     display: inline;
     font-size: 24px;
     line-height: 32px;
+}
+a img {
+    border-bottom: 0 !important;
+    border: none !important;
 }
 h2 {
     margin: 0;
@@ -81,7 +93,6 @@ h5{
     font-size: 18px;
     line-height: 24px;
     font-weight: 700;
-    font-style: italic;
     margin: 0;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -104,6 +115,10 @@ div {
     -webkit-box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+article {
+    overflow: hidden;
+    margin-bottom: 30px;
 }
 .center-pt20{
     text-align: center;
@@ -146,6 +161,11 @@ div {
     margin-right: 15px;
     float: left;
 	padding-right: 60px;
+}
+.module3x {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px;
 }
 .home-block{
     margin-bottom: 100px;
@@ -204,9 +224,9 @@ div {
     padding-left: 5px;
     padding-right: 5px;
 }
-.main-nav>ul>li>a:link{color: #fff; border-bottom: 1px solid rgba(255,255,255,.5);}
-.main-nav>ul>li>a:visited{color: #fff; border-bottom: 1px solid rgba(255,255,255,.5);}
-.main-nav>ul>li>a:hover{color: #000; border-bottom: 1px solid rgba(0,0,0,.5);}
+.main-nav>ul>li>a:link{color: #fff; border-bottom: 1px solid rgba(255,255,255,.2);}
+.main-nav>ul>li>a:visited{color: #fff; border-bottom: 1px solid rgba(255,255,255,.2);}
+.main-nav>ul>li>a:hover{color: #0e3e5c; border-bottom: 1px solid rgba(14,62,92,.2);}
 
 
 .help-button {
@@ -390,6 +410,20 @@ div[id*="leyka_scale_standalone"] {
     margin-left: 0;
     text-align: left;
 }
+.leyka-tpl-neo input[type="checkbox"]:checked ~ .leyka-checkbox-label::before {
+    background-color: #ef404e;
+    border-color: #ef404e;
+}
+.leyka-tpl-neo .leyka-payment-option .leyka-field.recurring {
+    background: #fff;
+    margin-bottom: 5px;
+}
+.leyka-tpl-neo label.checkbox {
+    padding-right: 26px;
+    width: auto;
+}
+
+
 
 /*адаптивка*/
 @media (max-width: 600px) {
@@ -429,15 +463,16 @@ div[id*="leyka_scale_standalone"] {
     .back-holder {
         width: 100%;
     }
-    .module {
-        float: left;
+    .module, .module3x {
         margin-left: 0;
         margin-right: 0;
         width: 100%;
     }
     .module2x {
-        width: 90%;
+        width: 100%;
         padding-right: 10px;
+        margin-left: 0;
+        margin-right: 0;
     }
     .container p:first-of-type {
         font-size: 2em;
@@ -445,5 +480,16 @@ div[id*="leyka_scale_standalone"] {
     .container p {
         font-size: 1em;
     }
-
+    .header > div {
+        height: auto;
+        margin-bottom: 40px;
+    }
+    .footer {
+        margin-left: -10px;
+        margin-right: -10px;
+    }
+    .footer > div {
+        height: auto;
+        margin-bottom: 20px;
+    }
 }
